tests/snapshots/measurements_svg.snap
---
source: tests/snapshots.rs
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="162.625" height="90.400" viewBox="-28.600 -16.000 162.625 90.400" font-family="ui-monospace, SFMono-Regular, Menlo, Consolas, monospace" font-size="10">
  <title>measurement_shapes</title>
  <rect x="-28.600" y="-16.000" width="162.625" height="90.400" fill="#FFFFFF"/>
  <g>
    <line x1="0.000" y1="0.000" x2="95.023" y2="0.000" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="95.023" y1="0.996" x2="128.025" y2="0.996" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="95.023" y1="-0.996" x2="128.025" y2="-0.996" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-13.300" y="3.500" text-anchor="middle" fill="#000000">|0&gt;</text>
    <line x1="0.000" y1="28.450" x2="52.348" y2="28.450" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="52.348" y1="29.446" x2="128.025" y2="29.446" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="52.348" y1="27.454" x2="128.025" y2="27.454" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-13.300" y="31.950" text-anchor="middle" fill="#000000">|0&gt;</text>
    <line x1="0.000" y1="56.900" x2="52.348" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="52.348" y1="57.896" x2="128.025" y2="57.896" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="52.348" y1="55.904" x2="128.025" y2="55.904" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-13.300" y="60.400" text-anchor="middle" fill="#000000">|0&gt;</text>
    <rect x="32.675" y="-10.000" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="42.675" y="3.500" text-anchor="middle" fill="#000000">H</text>
    <rect x="75.350" y="-10.000" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <path d="M 79.091 -2.845 A 6.259 6.259 0 0 1 91.609 -2.845" fill="none" stroke="#000000" stroke-width="1"/>
    <line x1="85.350" y1="-2.845" x2="90.187" y2="3.414" fill="none" stroke="#000000" stroke-width="1"/>
    <path d="M 32.675 38.450 L 42.675 38.450 A 10.000 10.000 0 0 0 42.675 18.450 L 32.675 18.450 Z" fill="#DDEEFF" stroke="#0000FF" stroke-width="1"/>
    <text x="42.675" y="31.950" text-anchor="middle" fill="#0000FF">Z</text>
    <path d="M 32.675 56.900 L 39.342 46.900 L 52.675 46.900 L 52.675 66.900 L 39.342 66.900 Z" fill="#FFFF00" stroke="#FF0000" stroke-width="1"/>
    <text x="42.675" y="60.400" text-anchor="middle" fill="#FF0000">X</text>
  </g>
</svg>
