tests/snapshots/permute_typst.snap
---
source: tests/snapshots.rs
---
#set page(width: auto, height: auto, margin: 6pt, fill: white)
#import "@preview/quill:0.8.0" as quill

#quill.quantum-circuit(
  wires: 5,
  row-spacing: 12.000pt,
  column-spacing: 12.000pt,
  scale: 100.000%,
  gate-padding: 5.000pt,
  fill: white,
  quill.setwire(1, stroke: black),
  3,
  quill.setwire(1, stroke: black),
  2,
  quill.setwire(1, stroke: black),
  1,
  [\ ],
  quill.setwire(1, stroke: black),
  3,
  quill.setwire(1, stroke: black),
  2,
  quill.setwire(1, stroke: black),
  1,
  [\ ],
  quill.setwire(1, stroke: black),
  3,
  quill.setwire(2, stroke: black),
  2,
  quill.setwire(1, stroke: black),
  1,
  [\ ],
  quill.setwire(1, stroke: black),
  3,
  quill.setwire(1, stroke: black),
  2,
  quill.setwire(1, stroke: black),
  1,
  [\ ],
  quill.setwire(2, stroke: black),
  3,
  quill.setwire(1, stroke: black),
  2,
  quill.setwire(2, stroke: black),
  1,
  quill.lstick(text("in"), x: 0, y: 0),
  quill.rstick(text("out"), x: 5, y: 0),
  quill.lstick(text("in"), x: 0, y: 1),
  quill.rstick(text("out"), x: 5, y: 1),
  quill.lstick(text("in"), x: 0, y: 2),
  quill.rstick(text("out"), x: 5, y: 2),
  quill.lstick(text("in"), x: 0, y: 3),
  quill.rstick(text("out"), x: 5, y: 3),
  quill.lstick(text("bit"), x: 0, y: 4),
  quill.rstick(text("bit"), x: 5, y: 4),
  quill.gate(text("H"), x: 1, y: 0),
  quill.permute(1, 4, 3, 0, 2, x: 2, y: 0, width: 36.000pt, stroke: purple, bend: 100.000%, wire-count: (1, 1, 1, 1, 2)),
  quill.gate(text("X"), x: 3, y: 0),
  quill.gate(text("Y"), x: 3, y: 1),
  quill.gate(text("Z"), x: 3, y: 4),
  quill.permute(3, 0, 4, 2, 1, x: 4, y: 0, width: 28.000pt, stroke: teal, bend: 100.000%, wire-count: (1, 1, 2, 1, 1)),
)
