tests/snapshots/portable_svg.snap
---
source: tests/snapshots.rs
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="229.162" height="29.500" viewBox="-16.200 -12.000 229.162 29.500" font-family="ui-monospace, SFMono-Regular, Menlo, Consolas, monospace" font-size="10">
  <title>portable</title>
  <rect x="-16.200" y="-12.000" width="229.162" height="29.500" fill="#FFFFFF"/>
  <g>
    <line x1="0.000" y1="0.000" x2="178.163" y2="0.000" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-7.100" y="3.500" text-anchor="middle" fill="#000000">q</text>
    <rect x="110.525" y="-3.700" width="35.000" height="11.000" fill="#FFFF00" opacity="0.500"/>
    <text x="128.025" y="3.500" text-anchor="middle" fill="#0000FF" opacity="0.500"><a xlink:href="https://example.com/stage" href="https://example.com/stage">stage</a></text>
    <line x1="178.163" y1="3.698" x2="178.163" y2="-3.698" fill="none" stroke="#FF0000" stroke-width="1" opacity="0.250"/>
    <text x="194.562" y="3.500" text-anchor="middle" fill="#FF0000" opacity="0.250">done</text>
  </g>
</svg>
