tests/snapshots/qft4vert_svg.snap
---
source: tests/snapshots.rs
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="122.535" height="437.333" viewBox="-120.150 -10.500 136.150 485.925" font-family="ui-monospace, SFMono-Regular, Menlo, Consolas, monospace" font-size="10">
  <title>qft4_vertical</title>
  <rect x="-120.150" y="-10.500" width="136.150" height="485.925" fill="#FFFFFF"/>
  <g transform="rotate(90)">
    <line x1="0.000" y1="85.350" x2="469.425" y2="85.350" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-16.400" y="88.850" text-anchor="middle" fill="#000000" transform="rotate(-90 0.000 85.350)">q[0]</text>
    <line x1="0.000" y1="56.900" x2="469.425" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-16.400" y="60.400" text-anchor="middle" fill="#000000" transform="rotate(-90 0.000 56.900)">q[1]</text>
    <line x1="0.000" y1="28.450" x2="469.425" y2="28.450" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-16.400" y="31.950" text-anchor="middle" fill="#000000" transform="rotate(-90 0.000 28.450)">q[2]</text>
    <line x1="0.000" y1="0.000" x2="469.425" y2="0.000" fill="none" stroke="#000000" stroke-width="1"/>
    <text x="-16.400" y="3.500" text-anchor="middle" fill="#000000" transform="rotate(-90 0.000 0.000)">q[3]</text>
    <rect x="32.675" y="75.350" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="42.675" y="88.850" text-anchor="middle" fill="#000000" transform="rotate(-90 42.675 85.350)">H</text>
    <line x1="85.350" y1="56.900" x2="85.350" y2="85.350" fill="none" stroke="#000000" stroke-width="1"/>
    <circle cx="85.350" cy="56.900" r="2.200" fill="#000000" stroke="#000000" stroke-width="1"/>
    <circle cx="85.350" cy="85.350" r="10.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="85.350" y="88.850" text-anchor="middle" fill="#000000" transform="rotate(-90 85.350 85.350)">2</text>
    <line x1="128.025" y1="28.450" x2="128.025" y2="85.350" fill="none" stroke="#000000" stroke-width="1"/>
    <circle cx="128.025" cy="28.450" r="2.200" fill="#000000" stroke="#000000" stroke-width="1"/>
    <circle cx="128.025" cy="85.350" r="10.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="128.025" y="88.850" text-anchor="middle" fill="#000000" transform="rotate(-90 128.025 85.350)">3</text>
    <line x1="170.700" y1="0.000" x2="170.700" y2="85.350" fill="none" stroke="#000000" stroke-width="1"/>
    <circle cx="170.700" cy="0.000" r="2.200" fill="#000000" stroke="#000000" stroke-width="1"/>
    <circle cx="170.700" cy="85.350" r="10.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="170.700" y="88.850" text-anchor="middle" fill="#000000" transform="rotate(-90 170.700 85.350)">4</text>
    <rect x="203.375" y="46.900" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="213.375" y="60.400" text-anchor="middle" fill="#000000" transform="rotate(-90 213.375 56.900)">H</text>
    <line x1="256.050" y1="28.450" x2="256.050" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <circle cx="256.050" cy="28.450" r="2.200" fill="#000000" stroke="#000000" stroke-width="1"/>
    <circle cx="256.050" cy="56.900" r="10.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="256.050" y="60.400" text-anchor="middle" fill="#000000" transform="rotate(-90 256.050 56.900)">2</text>
    <line x1="298.725" y1="0.000" x2="298.725" y2="56.900" fill="none" stroke="#000000" stroke-width="1"/>
    <circle cx="298.725" cy="0.000" r="2.200" fill="#000000" stroke="#000000" stroke-width="1"/>
    <circle cx="298.725" cy="56.900" r="10.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="298.725" y="60.400" text-anchor="middle" fill="#000000" transform="rotate(-90 298.725 56.900)">3</text>
    <rect x="331.400" y="18.450" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="341.400" y="31.950" text-anchor="middle" fill="#000000" transform="rotate(-90 341.400 28.450)">H</text>
    <line x1="384.075" y1="0.000" x2="384.075" y2="28.450" fill="none" stroke="#000000" stroke-width="1"/>
    <circle cx="384.075" cy="0.000" r="2.200" fill="#000000" stroke="#000000" stroke-width="1"/>
    <circle cx="384.075" cy="28.450" r="10.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="384.075" y="31.950" text-anchor="middle" fill="#000000" transform="rotate(-90 384.075 28.450)">2</text>
    <rect x="416.750" y="-10.000" width="20.000" height="20.000" fill="#FFFFFF" stroke="#000000" stroke-width="1"/>
    <text x="426.750" y="3.500" text-anchor="middle" fill="#000000" transform="rotate(-90 426.750 0.000)">H</text>
  </g>
</svg>
